[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task management system: set tasks, assign performers, and change their statuses"
license = "Proprietary"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zluuba/python-project-52"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
python-dotenv = "^1.0.0"
dj-database-url = "^1.3.0"
django-bootstrap4 = "^23.1"
django-filter = "^23.1"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
