[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task management system: set tasks, assign performers, and change their statuses"
license = "Proprietary"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zluuba/task-manager"
packages = [{include = "task_manager"}]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Framework :: Django",
    "Topic :: Internet",
]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^23.1"
django-filter = "^23.1"
psycopg2 = "^2.9.6"
gunicorn = "^20.1.0"
rollbar = "^0.16.3"
dj-database-url = "0.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
